Bug : realigned correct answer passage in question card

--- a/src/views/public/css/unitQuestion.css
+++ b/src/views/public/css/unitQuestion.css
@@ -59,7 +59,7 @@
   font-size: 1.1rem;
   padding: 10px;
   position: relative;
-  left: -20%;
+  /* left: -20%; */
 }
 .question-difficulty_easy {
   background-color: #bce1be;
